Fix text overlapping with buttons on small screens

--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -27,3 +27,8 @@ html, body {
 .feed-item {
 	cursor: pointer;
 }
+
+.feed-row {
+  padding-bottom: 0px !important;
+  margin-bottom: 0px !important;
+}
